--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -1118,9 +1118,10 @@
             <!-- Ideal Solution Chart Div-->
             <div id="ideal_solution_chart">
                 <p id="ideal_solution_chart_text">A solução ideal para Construção Civil<span
-                    class="other-color" style="color:red">.</span></p>~
+                style="color:red">.</span></p>
 
                 <img id="ideal_solution_chart_img" src="img/solution_chart.png" alt="">
+                
             </div>
 
 
