--- a/www/index.html
+++ b/www/index.html
@@ -1111,6 +1111,15 @@
                 </div>
             </div>
 
+             <!-- Ideal Solution Chart Div-->
+             <div id="ideal_solution_chart">
+                <p id="ideal_solution_chart_text">A solução ideal para Construção Civil<span
+                style="color:red">.</span></p>
+
+                <img id="ideal_solution_chart_img" src="img/solution_chart.png" alt="">
+                
+            </div>
+            
             <hr class="hr-mobile">
             <!-- SECÇÂO NOSSOS PROJETOS-->
             <div id="projects-section-construction" class="projects-section">
