--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -20,10 +20,6 @@
     <script src="scripts/jquerySwipeHandler.js"></script>
     <script src="scripts/svgManager.js"></script>
     <script src="scripts/especialistas.js"></script>
-
-
-
-
     <link rel="stylesheet" href="styles/style_especialistas.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
@@ -1001,8 +997,10 @@
                             <div id="collapseTwo" class="text_accordion collapse" aria-labelledby="headingTwo"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Some placeholder content for the second accordion panel. This panel is hidden by
-                                    default.
+                                    Gestão do fluxo de encomendas a fornecedores, desde a encomenda e criação de ordens
+                                    de compra até à receção dos artigos ou mercadorias. Cálculo de necessidades e
+                                    preparação de encomendas de material a entregar nas obras definidas com respetivos
+                                    timings, e possibilidade de atribuir um estado para as encomendas efetuadas.
                                 </div>
                             </div>
                         </div>
@@ -1028,8 +1026,10 @@
                             <div id="collapseThree" class="text_accordion collapse" aria-labelledby="headingThree"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    And lastly, the placeholder content for the third and final accordion panel. This
-                                    panel is hidden by default.
+                                    Gestão automática de pagamentos e recebimentos via débito direto SEPA ou referências
+                                    multibanco. Cronograma financeiro acordado com o cliente e monitor de gestão de
+                                    dívidas e cobranças. Gestão e controlo de contas bancárias. Emissão automática de
+                                    pagamentos a fornecedores. 
                                 </div>
                             </div>
                         </div>
@@ -1055,7 +1055,8 @@
                             <div id="collapseFour" class="text_accordion collapse" aria-labelledby="headingFour"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Four
+                                    Consulta e pedidos automáticos de preços – relativos a materiais, serviços ou
+                                    subempreitadas dos orçamentos dos vários processos – a fornecedores.
                                 </div>
                             </div>
                         </div>
@@ -1081,7 +1082,8 @@
                             <div id="collapseFive" class="text_accordion collapse" aria-labelledby="headingFive"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Five
+                                    Monitor de ocupação horária que permite ter uma visualização da gestão da ocupação e
+                                    da disponibilidade de recursos distribuídos pelo articulado da obra.
                                 </div>
                             </div>
                         </div>
@@ -1107,7 +1109,9 @@
                             <div id="collapseSix" class="text_accordion collapse" aria-labelledby="headingSix"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Six
+                                    Introdução de medições por item/capítulo, com controlo dos trabalhos em curso,
+                                    registo de trabalhos a mais ou a menos realizados e emissão da respetiva faturação
+                                    de forma automática.
                                 </div>
                             </div>
                         </div>
@@ -1117,16 +1121,197 @@
 
             <!-- Ideal Solution Chart Div-->
             <div id="ideal_solution_chart">
-                <p id="ideal_solution_chart_text">A solução ideal para Construção Civil<span
-                style="color:red">.</span></p>
+                <p id="ideal_solution_chart_text">A solução ideal para Construção Civil<span style="color:red">.</span>
+                </p>
 
                 <img id="ideal_solution_chart_img" src="img/solution_chart.png" alt="">
-                
+
+            </div>
+
+            <hr class="hr-mobile">
+            <!-- SECÇÂO NOSSOS PROJETOS-->
+            <div id="projects-section-construction" class="projects-section">
+
+                <p class="projects-section-title">Os Nossos Projetos<span class="dot_point_geral">.</span>
+                </p>
+
+                <img class="projects-elipse" src="img\elipse_grey.png" alt="">
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="project-item">
+                                <div class="project-item-study-case">
+                                    <p class="project-item-text-1">
+                                        Caso de Estudo #01
+                                    </p>
+
+                                    <p class="project-item-text-2">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-3">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-4">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra ut in
+                                        volutpat, integer netus. Sed ipsum nec feugiat elementum. Elit diam nisi id
+                                        phasellus egestas ut cursus.
+                                    </p>
+
+                                    <p class="project-item-text-3">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-4">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra ut in
+                                        volutpat.
+                                    </p>
+
+                                </div>
+                                <div class="project-item-logo">
+                                    <img src="img\projects-background.jpg" alt="">
+                                    <img class="projects-item-hover" src="img\ogma_project.png" alt="">
+
+
+                                </div>
+
+
+
+
+                            </div>
+
+                        </div>
+                        <div class="carousel-item">
+                            <div class="project-item">
+                                <div class="project-item-study-case">
+                                    <p class="project-item-text-1">
+                                        Caso de Estudo #02
+                                    </p>
+
+                                    <p class="project-item-text-2">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-3">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-4">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra ut in
+                                        volutpat, integer netus. Sed ipsum nec feugiat elementum. Elit diam nisi id
+                                        phasellus egestas ut cursus.
+                                    </p>
+
+                                    <p class="project-item-text-3">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-4">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra ut in
+                                        volutpat.
+                                    </p>
+
+                                </div>
+                                <div class="project-item-logo">
+                                    <img src="img\projects-background.jpg" alt="">
+                                    <img class="projects-item-hover" src="img\ogma_project.png" alt="">
+
+                                </div>
+
+
+
+
+                            </div>
+
+                        </div>
+                        <div class="carousel-item">
+                            <div class="project-item">
+                                <div class="project-item-study-case">
+                                    <p class="project-item-text-1">
+                                        Caso de Estudo #03
+                                    </p>
+
+                                    <p class="project-item-text-2">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-3">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-4">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra ut in
+                                        volutpat, integer netus. Sed ipsum nec feugiat elementum. Elit diam nisi id
+                                        phasellus egestas ut cursus.
+                                    </p>
+
+                                    <p class="project-item-text-3">
+                                        Lorem Ipsum
+                                    </p>
+
+                                    <p class="project-item-text-4">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla viverra ut in
+                                        volutpat.
+                                    </p>
+
+                                </div>
+                                <div class="project-item-logo">
+                                    <img src="img\projects-background.jpg" alt="">
+                                    <img class="projects-item-hover" src="img\ogma_project.png" alt="">
+
+                                </div>
+
+
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+                <hr id="first-hr">
+
             </div>
 
 
 
 
+
+
+
+            <!-- FIM SECÇÂO NOSSOS PROJETOS-->
+
+
+
+
+            <!-- SECÇÂO REVIEWS-->
+
+            <div class="section-reviews">
+
+
+
+
+            </div>
+
+
+
+            <!-- FIM SECÇÃO REVIEWS-->
 
 
 
@@ -1138,8 +1323,6 @@
                 <button class="white-button">
                     Pedir a demo
                 </button>
-
-
 
             </div>
 
