--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -427,52 +427,53 @@
 
 
         <!-- Conteúdo ÁREA CONTACTOS-->
-
         <div id="section-contact-us">
-            <div id="content-contact-us">
+            <div id="section-contact-us_first">
+                <div id="content-contact-us">
 
-                <p id="contact_us_title">
-                    Contacte-nos<span style="color:red">.</span>
-                </p>
+                    <p id="contact_us_title">
+                        Contacte-nos<span style="color:red">.</span>
+                    </p>
 
 
+
+                </div>
+            </div>
+
+            <div id="offices_cities">
+                <div id="offices_cities_text">
+                    <ul class="offices_list" id="offices_cities_text">
+                        <li>
+                            <a id="lisboa">Lisboa</a>
+                        </li>
+                        <li>
+                            <a id="porto">Porto</a>
+                        </li>
+                        <li>
+                            <a id="setubal">Setúbal</a>
+                        </li>
+                        <li>
+                            <a id="faro">Faro</a>
+                        </li>
+                        <li>
+                            <a id="funchal">Funchal</a>
+                        </li>
+                        <li>
+                            <a id="madrid">Madrid</a>
+                        </li>
+                        <li>
+                            <a id="moçambique">Moçambique</a>
+                        </li>
+                        <li>
+                            <a id="angola">Angola</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="contact-us-office-info">
+                <!-- ADICIONAR ESCRITÓRIOS -->
 
             </div>
-        </div>
-
-        <div id="offices_cities">
-            <div id="offices_cities_text">
-                <ul class="offices_list" id="offices_cities_text">
-                    <li>
-                        <a id="lisboa">Lisboa</a>
-                    </li>
-                    <li>
-                        <a id="porto">Porto</a>
-                    </li>
-                    <li>
-                        <a id="setubal">Setúbal</a>
-                    </li>
-                    <li>
-                        <a id="faro">Faro</a>
-                    </li>
-                    <li>
-                        <a id="funchal">Funchal</a>
-                    </li>
-                    <li>
-                        <a id="madrid">Madrid</a>
-                    </li>
-                    <li>
-                        <a id="moçambique">Moçambique</a>
-                    </li>
-                    <li>
-                        <a id="angola">Angola</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div id="contact-us-office-info">
-            <!-- ADICIONAR ESCRITÓRIOS -->
-            
         </div>
     </div>
 
