--- a/www/index.html
+++ b/www/index.html
@@ -428,31 +428,110 @@
         <!-- Conteúdo ÁREA CONTACTOS-->
 
         <div id="section-contact-us">
-            <div id="content-contact-us">
-                <p id="title-1">
-                    Lorem ipsum
-                </p>
+            <div id="section-contact-us_first">
+                <div id="content-contact-us">
 
-                <p id="title-2">
-                    Contacta-nos
-                </p>
+                    <p id="contact_us_title">
+                        Contacte-nos<span style="color:red">.</span>
+                    </p>
 
-                <p id="title-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus tellus eget sollicitudin enim rutrum
-                    viverra
-                    sit.
-                </p>
 
-                <div id="more-info">
-                    <button id="more-info-button-contact-us" class="more-info-button-homepage">
-                        Saber mais
-                    </button>
+
                 </div>
             </div>
-            <div id="contact-us-office-info">
-                <!-- ADICIONAR ESCRITÓRIOS -->
 
+            <div id="offices_cities">
+                <div id="offices_cities_text">
+                    <ul class="offices_list" id="offices_cities_text">
+                        <li>
+                            <a id="lisboa">Lisboa</a>
+                        </li>
+                        <li>
+                            <a id="porto">Porto</a>
+                        </li>
+                        <li>
+                            <a id="setubal">Setúbal</a>
+                        </li>
+                        <li>
+                            <a id="faro">Faro</a>
+                        </li>
+                        <li>
+                            <a id="funchal">Funchal</a>
+                        </li>
+                        <li>
+                            <a id="madrid">Madrid</a>
+                        </li>
+                        <li>
+                            <a id="moçambique">Moçambique</a>
+                        </li>
+                        <li>
+                            <a id="angola">Angola</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
+            <div id="contact-us-office-info">
+
+                <!-- ADICIONAR ESCRITÓRIOS -->
+                <div class="offices_div" id="first_offices_div">
+                    <p class="offices_text_class">Escritórios</p>
+
+                    <p class="above_office_text" id="text_offices">Av. Cor. Eduardo Galhardo, 3, <svg
+                            class="contacts_svg" width="15" height="15" viewBox="0 0 15 15" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
+                                fill="white" fill-opacity="0.74" />
+                        </svg>
+                        <br>
+                        1170-105 Lisboa, Portugal
+                    </p>
+                </div>
+
+                <hr class="vertical-line" id="construction-line-1">
+                <div class="offices_div" id="second_offices_div">
+                    <p class="offices_text_class">Telefones</p>
+
+                    <p class="above_office_text" id="phones_offices1">(+351) 211 454 004 <svg class="contacts_svg"
+                            width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
+                                fill="white" fill-opacity="0.74" />
+                        </svg>
+                    </p>
+                    <p class="above_office_text" id="phones_offices2">(+351) 960 256 862 <svg class="contacts_svg"
+                            width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
+                                fill="white" fill-opacity="0.74" />
+                        </svg>
+                    </p>
+                    <p class="above_office_text" id="phones_offices3">(+351) 965 258 220 (Dir. Comercial) <svg
+                            class="contacts_svg" width="15" height="15" viewBox="0 0 15 15" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
+                                fill="white" fill-opacity="0.74" />
+                        </svg>
+                    </p>
+                </div>
+
+                <hr class="vertical-line" id="construction-line-1">
+                <div class="offices_div" id="third_offices_div">
+                    <p class="offices_text_class">E-mail</p>
+
+                    <p class="above_office_text">info@anturio.com <svg class="contacts_svg" width="15" height="15"
+                            viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
+                                fill="white" fill-opacity="0.74" />
+                        </svg></p>
+                </div>
+
+                <hr class="vertical-line" id="construction-line-1">
+            </div>
+
         </div>
 
         <!-- SECÇÃO CONSTRUÇÃO -->
