--- a/www/index.html
+++ b/www/index.html
@@ -534,7 +534,7 @@
 
             <!-- mobile version-->
             <div class="accordion" id="accordionOffices" style="display: none">
-                <div class="card">
+                <div class="card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingOne">
                         <h2 class="mb-0">
                             <button id="buttonOne"
@@ -556,14 +556,14 @@
 
                     <div id="collapseOne" class="text_accordion collapse show" aria-labelledby="headingOne"
                         data-parent="#accordionOffices">
-                        <div class="card-body">
+                        <div class="card-body card-contact-us">
                             Consultas dos balanços de obra, para visualização do valor adjudicado, do status dos
                             trabalhos em curso e das notas de créditos efetuadas, ou seja, do saldo de cada
                             obra.
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingTwo">
                         <h2 class="mb-0">
                             <button id="buttonTwo"
@@ -592,7 +592,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingThree">
                         <h2 class="mb-0">
                             <button id="buttonThree"
@@ -621,7 +621,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingFour">
                         <h2 class="mb-0">
                             <button id="buttonFour"
@@ -648,7 +648,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingFive">
                         <h2 class="mb-0">
                             <button id="buttonFive"
@@ -675,7 +675,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingSix">
                         <h2 class="mb-0">
                             <button id="buttonSix"
@@ -703,7 +703,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingSeven">
                         <h2 class="mb-0">
                             <button id="buttonSeven"
@@ -731,7 +731,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card_go_down card">
+                <div class="card_go_down card card-contact-us">
                     <div class="accordion_offices accordion_background card-header" id="headingEigth">
                         <h2 class="mb-0">
                             <button id="buttonEigth"
