--- a/www/index.html
+++ b/www/index.html
@@ -478,7 +478,7 @@
                     <p class="offices_text_class">Escritórios</p>
 
                     <p class="above_office_text" id="text_offices">Av. Cor. Eduardo Galhardo, 3, <svg
-                            class="contacts_svg" width="15" height="15" viewBox="0 0 15 15" fill="none"
+                            class="contacts_svg svg_address_lisboa" width="15" height="15" viewBox="0 0 15 15" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
@@ -561,7 +561,7 @@
                                 <p class="offices_text_class">Escritórios</p>
             
                                 <p class="above_office_text" id="text_offices">Av. Cor. Eduardo Galhardo, 3, <svg
-                                        class="contacts_svg" width="15" height="15" viewBox="0 0 15 15" fill="none"
+                                        class="contacts_svg svg_address_lisboa" width="15" height="15" viewBox="0 0 15 15" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
                                             d="M1.95833 1.95833V13.0417H13.0417V7.5H14.625V13.0417C14.625 13.9125 13.9125 14.625 13.0417 14.625H1.95833C1.07958 14.625 0.375 13.9125 0.375 13.0417V1.95833C0.375 1.0875 1.07958 0.375 1.95833 0.375H7.5V1.95833H1.95833ZM9.08333 1.95833V0.375H14.625V5.91667H13.0417V3.07458L5.25958 10.8567L4.14333 9.74042L11.9254 1.95833H9.08333Z"
