Adicionados cliques nas redes sociais

--- a/www/index.html
+++ b/www/index.html
@@ -112,7 +112,7 @@
                             <p>Encontra-nos nas redes sociais</p>
                         </div>
                         <div id="hamburguer-icons">
-                            <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
+                            <svg class="facebook_click" width="50" height="50" viewBox="0 0 60 60" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M0 30C0 13.4315 13.4315 0 30 0C46.5685 0 60 13.4315 60 30C60 46.5685 46.5685 60 30 60C13.4315 60 0 46.5685 0 30Z"
@@ -121,7 +121,7 @@
                                     d="M36.9809 31.875L37.8141 26.4457H32.6045V22.9225C32.6045 21.4371 33.3323 19.9893 35.6655 19.9893H38.0338V15.3668C38.0338 15.3668 35.8846 15 33.8297 15C29.5395 15 26.7352 17.6004 26.7352 22.3078V26.4457H21.9662V31.875H26.7352V45H32.6045V31.875H36.9809Z"
                                     fill="#F5F5F5" />
                             </svg>
-                            <svg width="50" height="50" viewBox="0 0 60 60" fill="none"
+                            <svg class="instagram_click" width="50" height="50" viewBox="0 0 60 60" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M0 30C0 13.4315 13.4315 0 30 0C46.5685 0 60 13.4315 60 30C60 46.5685 46.5685 60 30 60C13.4315 60 0 46.5685 0 30Z"
@@ -149,7 +149,7 @@
             </div>
             <div id="nav-social-language">
                 <div class="social-media">
-                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="facebook_click" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                             fill="#F5F5F5" />
@@ -158,7 +158,7 @@
                             fill="#212121" />
                     </svg>
 
-                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="instagram_click" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
                             fill="#F5F5F5" />
@@ -3719,7 +3719,7 @@
 
                                 </div>
                                 <div id="social_media">
-                                    <svg width="32" href="#" class="hover_social_media" height="32" viewBox="0 0 32 32"
+                                    <svg class="instagram_click hover" width="32" href="#" class="hover_social_media" height="32" viewBox="0 0 32 32"
                                         fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path opacity="0.1" fill-rule="evenodd" clip-rule="evenodd"
                                             d="M0 16C0 7.16344 7.16344 0 16 0C24.8366 0 32 7.16344 32 16C32 24.8366 24.8366 32 16 32C7.16344 32 0 24.8366 0 16Z"
