tablet e mobile ganhos com a solução

--- a/www/especialistas_fatores.html
+++ b/www/especialistas_fatores.html
@@ -2027,9 +2027,9 @@
                     </div>
                 </div>
             </div>
-
             <!-- Início SECÇÃO O QUE PODE GANHAR COM ESTA SOLUÇÃO-->
             <div id="solution_gains">
+                <hr class="hr_separate_accordion_gains">
                 <div id="solution_gains_text">
                     <p>O que pode ganhar com esta solução<span style="color:red">.</span></p>
                 </div>
