Add seccção control_planning
falta alinhar imagem

--- a/www/index.html
+++ b/www/index.html
@@ -2026,9 +2026,9 @@
                 </div>
             </div>
             <!-- Início SECÇÃO O QUE PODE GANHAR COM ESTA SOLUÇÃO-->
-            <div id="solution_gains">
+            <div class="solution_gains">
                 <hr class="hr_separate_accordion_gains">
-                <div id="solution_gains_text">
+                <div class="solution_gains_text">
                     <p>O que pode ganhar com esta solução<span style="color:red">.</span></p>
                 </div>
                 <div class="solution_gains_class">
@@ -2072,6 +2072,8 @@
                 </div>
             </div>
             <!-- FIM SECÇÃO O QUE PODE GANHAR COM ESTA SOLUÇÃO-->
+
+
 
             <!-- Ideal Solution Chart Div-->
             <div id="ideal_solution_chart">
@@ -2502,24 +2504,47 @@
                         </div>
 
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
                 </div>
 
                 <img class="solution-ideal-circle" src="/img/circle_solution_ideal.png" alt="">
 
             </div>
-
+            <!-- Fim SOLUÇÃO À MEDIDA -->
+            <!-- Início SECÇÃO MAIS CONTROLO-->
+            <div class="control_and_planning">
+                <div class="control_and_planning_title">
+                    <p>Mais controlo e planeamento para a máxima rentabilidade<span style="color:red">.</span>
+                    </p>
+                </div>
+                <div class="control_and_planning_content">
+                    <div class="control_and_planning_text">
+                        <div class="control_and_planing_text_items">
+                            <p class="control_and_planning_text_title">Headline</p>
+                            <p class="control_and_planning_text_content">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Interdum porta magna at blandit a.</p>
+                        </div>
+                        <div class="control_and_planing_text_items">
+                            <p class="control_and_planning_text_title">Headline</p>
+                            <p class="control_and_planning_text_content">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Interdum porta magna at blandit a.</p>
+                        </div>
+                        <div class="control_and_planing_text_items">
+                            <p class="control_and_planning_text_title">Headline</p>
+                            <p class="control_and_planning_text_content">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Interdum porta magna at blandit a.</p>
+                        </div>
+                        <div class="control_and_planing_text_items">
+                            <p class="control_and_planning_text_title">Headline</p>
+                            <p class="control_and_planning_text_content">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit. Interdum porta magna at blandit a.</p>
+                        </div>
+                    </div>
+                    <div class="control_and_planning_img">
+                        <img src="img/anturio_tablet.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- Fim SECÇÃO MAIS CONTROLO-->
 
 
             <hr class="hr-mobile">
