--- a/www/index.html
+++ b/www/index.html
@@ -1156,9 +1156,7 @@
                 </p>
 
                 <p id="title-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus tellus eget sollicitudin enim rutrum
-                    viverra
-                    sit.
+                    Maior controlo e rigor na gestão de obras e projetos
                 </p>
 
                 <div id="more-info">
@@ -1263,9 +1261,7 @@
                 </p>
 
                 <p id="title-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus tellus eget sollicitudin enim rutrum
-                    viverra
-                    sit.
+                    Mais eficiência na ocupação de armazéns e linhas de distribuição
                 </p>
 
                 <div id="more-info">
@@ -1370,9 +1366,7 @@
                 </p>
 
                 <p id="title-3">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus tellus eget sollicitudin enim rutrum
-                    viverra
-                    sit.
+                    Gestão e otimização dos processos de fabrico
                 </p>
 
                 <div id="more-info">
@@ -4816,7 +4810,7 @@
 
 
             <!-- SECÇÂO PEDIR DEMO-->
-            
+
 
             <div id="demo-section-construction" class="demo-section">
                 <p class="demo-section-text"><strong>Integre e supervisione</strong> a produção da sua empresa com total flexibilidade</p>
