Alterações na homepage

--- a/www/index.html
+++ b/www/index.html
@@ -215,7 +215,7 @@
         <div id="content-first-page">
 
             <p id="title-1">
-                Lorem ipsum
+                Solução para Construção Civil
             </p>
 
             <p id="title-2">
@@ -223,9 +223,7 @@
             </p>
 
             <p id="title-3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus tellus eget sollicitudin enim rutrum
-                viverra
-                sit.
+                Maior controlo e rigor na gestão de obras e projetos
             </p>
 
             <div id="sectors-slider">
