Adicionada área TI e correções a pedido do cliente

--- a/www/index.html
+++ b/www/index.html
@@ -96,7 +96,7 @@
                                 <a id="first-dropdown-option-1" onclick="ConstructionLoad()">Construção</a>
                                 <a id="first-dropdown-option-2" onclick="DistributionLoad()">Distribuição</a>
                                 <a id="first-dropdown-option-3" onclick="IndustryLoad();">Indústria</a>
-                                <a id="first-dropdown-option-4">TI</a>
+                                <a id="first-dropdown-option-4" onclick="ITLoad();">TI</a>
                             </div>
                         </div>
                     </li>
@@ -1443,6 +1443,111 @@
 
                     </div>
                     <svg class="arrows-sub-homepage" id="arrow-industry-rigth" width="14" height="24"
+                        viewBox="0 0 14 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M0.81867 2.94972C0.204914 2.33596 0.206317 1.34044 0.8218 0.72841C1.43506 0.118599 2.4262 0.120245 3.03742 0.73209L12.8812 10.5858C13.6615 11.3669 13.6612 12.6327 12.8804 13.4135L3.0252 23.2687C2.41423 23.8797 1.42366 23.8797 0.812698 23.2687C0.201734 22.6578 0.201733 21.6672 0.812697 21.0562L8.45473 13.4142C9.23578 12.6332 9.23578 11.3668 8.45473 10.5858L0.81867 2.94972Z"
+                            fill="white" />
+                    </svg>
+
+
+
+                </div>
+
+            </div>
+        </div>
+
+          <!-- SECÇÃO TI -->
+
+          <div id="section-ti-homepage">
+            <div id="content-homepage-ti">
+                <p id="title-1">
+                    Soluções para T.I
+                </p>
+
+                <p id="title-2">
+                    T.I
+                </p>
+
+                <p id="title-3">
+                    A melhor solução para T.I
+                </p>
+
+                <div id="more-info">
+                    <button id="construction-info-button" class="more-info-button-homepage">
+                        Fale Connosco
+                    </button>
+                </div>
+
+                <div class="sub-homepage-info">
+                    <svg id="arrow-construction-left" class="arrows-sub-homepage" width="14" height="24"
+                        viewBox="0 0 14 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M13.1813 2.94972C13.7951 2.33596 13.7937 1.34044 13.1782 0.72841C12.5649 0.118599 11.5738 0.120245 10.9626 0.73209L1.11884 10.5858C0.338463 11.3669 0.338784 12.6327 1.11955 13.4135L10.9748 23.2687C11.5858 23.8797 12.5763 23.8797 13.1873 23.2687C13.7983 22.6578 13.7983 21.6672 13.1873 21.0562L5.54527 13.4142C4.76422 12.6332 4.76422 11.3668 5.54527 10.5858L13.1813 2.94972Z"
+                            fill="white" />
+                    </svg>
+
+                    <div class="sub-homepage-info-item" id="construction-item-1">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Consultoria
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            1 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line" id="construction-line-1">
+
+                    <div class="sub-homepage-info-item" id="construction-item-2">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Nearshore
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            2 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line" id="construction-line-2">
+
+                    <div class="sub-homepage-info-item" id="construction-item-3">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Gestão de Serviços
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            3 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+
+                    <hr class="vertical-line" id="construction-line-3">
+
+                    <div class="sub-homepage-info-item" id="construction-item-4">
+                        <p class="sub-homepage-info-title"><svg width="27" height="25" viewBox="0 0 27 25" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.77778 0C1.23611 0 0 1.25 0 2.77778V22.2222C0 22.9589 0.292658 23.6655 0.813592 24.1864C1.33453 24.7073 2.04107 25 2.77778 25H22.2222C22.9589 25 23.6655 24.7073 24.1864 24.1864C24.7073 23.6655 25 22.9589 25 22.2222V19.0556C25.8194 18.5694 26.3889 17.6944 26.3889 16.6667V8.33333C26.3889 7.30556 25.8194 6.43056 25 5.94444V2.77778C25 2.04107 24.7073 1.33453 24.1864 0.813592C23.6655 0.292658 22.9589 0 22.2222 0H2.77778ZM2.77778 2.77778H22.2222V5.55556H13.8889C13.1522 5.55556 12.4456 5.84821 11.9247 6.36915C11.4038 6.89008 11.1111 7.59662 11.1111 8.33333V16.6667C11.1111 17.4034 11.4038 18.1099 11.9247 18.6309C12.4456 19.1518 13.1522 19.4444 13.8889 19.4444H22.2222V22.2222H2.77778V2.77778ZM13.8889 8.33333H23.6111V16.6667H13.8889V8.33333ZM18.0556 10.4167C17.503 10.4167 16.9731 10.6362 16.5824 11.0269C16.1917 11.4176 15.9722 11.9475 15.9722 12.5C15.9722 13.0525 16.1917 13.5824 16.5824 13.9731C16.9731 14.3638 17.503 14.5833 18.0556 14.5833C18.6081 14.5833 19.138 14.3638 19.5287 13.9731C19.9194 13.5824 20.1389 13.0525 20.1389 12.5C20.1389 11.9475 19.9194 11.4176 19.5287 11.0269C19.138 10.6362 18.6081 10.4167 18.0556 10.4167Z"
+                                    fill="white" />
+                            </svg> Gestão de projeto
+                        </p>
+                        <p class="sub-homepage-info-text">
+                            4 -Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus a eu eget.
+                        </p>
+
+                    </div>
+                    <svg class="arrows-sub-homepage" id="arrow-construction-rigth" width="14" height="24"
                         viewBox="0 0 14 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M0.81867 2.94972C0.204914 2.33596 0.206317 1.34044 0.8218 0.72841C1.43506 0.118599 2.4262 0.120245 3.03742 0.73209L12.8812 10.5858C13.6615 11.3669 13.6612 12.6327 12.8804 13.4135L3.0252 23.2687C2.41423 23.8797 1.42366 23.8797 0.812698 23.2687C0.201734 22.6578 0.201733 21.6672 0.812697 21.0562L8.45473 13.4142C9.23578 12.6332 9.23578 11.3668 8.45473 10.5858L0.81867 2.94972Z"
