--- a/www/index.html
+++ b/www/index.html
@@ -1461,15 +1461,15 @@
         <div id="section-ti-homepage">
             <div id="content-homepage-ti">
                 <p id="title-1">
-                    Soluções para T.I
+                    Soluções para TI
                 </p>
 
                 <p id="title-2">
-                    T.I
+                    TI
                 </p>
 
                 <p id="title-3">
-                    A melhor solução para T.I
+                    A melhor solução para TI
                 </p>
 
                 <div id="more-info">
