--- a/www/index.html
+++ b/www/index.html
@@ -4945,8 +4945,8 @@
 
 
 
-        <!-- Início Conteúdo Secções Indústria-->
-        <div id="industry-sections">
+        <!-- Início Conteúdo Secções TI-->
+        <div id="it-sections">
             <!-- SECÇÂO NOSSOS PROJETOS-->
             <div id="projects-section-construction" class="projects-section">
 
