Adição secção os nossos setores - por finalizar

--- a/www/index.html
+++ b/www/index.html
@@ -4953,17 +4953,44 @@
                         </div>
                     </div>
 
+                </div>
+
+            </div>
+
+            <!-- FIM SECÇÂO AS MELHORES SOLUÇÕES-->
+
+
+            <!-- INICIO SECÇÂO OS NOSSOS SETORES-->
+
+            <div class="sectors-it">
+                <div class="sectors-it-content">
+                    <div class="sectors-it-content-titles">
+                        <p class="sectors-it-title-1">Os nossos sectores<span class="dot_point_geral">.</span></p>
+                        <p class="sectors-it-title-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nisi, imperdiet eleifend suspendisse ullamcorper. Non a tellus tellus laoreet nibh dolor sit.</p>
+                    </div>
+
+                    <div class="sectores-it-content-info">
+                        <svg width="490" height="490" viewBox="0 0 490 490" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle opacity="0.1" cx="245" cy="245" r="230" stroke="white" stroke-width="30"/>
+                            <circle opacity="0.05" cx="245" cy="245" r="200" stroke="white" stroke-width="30"/>
+                            <circle opacity="0.1" cx="245" cy="245" r="170" stroke="white" stroke-width="30"/>
+                            <circle opacity="0.05" cx="245" cy="245" r="140" stroke="white" stroke-width="30"/>
+                            <path d="M15 245C15 372.025 117.975 475 245 475C372.025 475 475 372.025 475 245C475 117.975 372.025 15 245 15" stroke="#FC2B22" stroke-width="30" stroke-linecap="round"/>
+                            <path opacity="0.7" d="M245 445C355.457 445 445 355.457 445 245C445 134.543 355.457 45 245 45" stroke="#FC2B22" stroke-width="30" stroke-linecap="round"/>
+                            <path opacity="0.4" d="M245 75C274.645 75 303.774 82.7521 329.498 97.4869C355.221 112.222 376.645 133.427 391.642 158.999C406.639 184.57 414.688 213.619 414.991 243.262C415.294 272.906 407.84 302.113 393.369 327.986C378.898 353.858 357.913 375.497 332.496 390.755C307.079 406.013 278.114 414.358 248.475 414.964C218.837 415.57 189.555 408.416 163.535 394.21C137.516 380.004 115.664 359.241 100.147 333.981" stroke="#FC2B22" stroke-width="30" stroke-linecap="round"/>
+                            <path opacity="0.2" d="M245 105C268.075 105 290.793 110.704 311.132 121.604C331.471 132.504 348.8 148.263 361.577 167.478C374.355 186.692 382.185 208.768 384.371 231.74C386.556 254.711 383.03 277.867 374.105 299.147" stroke="#FC2B22" stroke-width="30" stroke-linecap="round"/>
+                            </svg>   
+                            <p class="percentage-it">
+                                95%
+                            </p>                         
+                        
+                    </div>
+
 
 
 
 
                 </div>
-
-
-
-
-
-
 
             </div>
 
@@ -4973,7 +5000,10 @@
 
 
 
-            <!-- FIM SECÇÂO AS MELHORES SOLUÇÕES-->
+
+
+
+            <!-- FIM SECÇÂO OS NOSSOS SETORES-->
 
 
 
