--- a/www/index.html
+++ b/www/index.html
@@ -5874,7 +5874,7 @@
                                     <a onclick="ITLoad()" href="#">TI</a>
                                 </li>
                                 <li>
-                                    <a onclick="ContactUsLoad()" href="#">Contacta-nos</a>
+                                    <a onclick="ContactUsLoad()" href="#">Contacte-nos</a>
                                 </li>
                             </ul>
 
